# VerusFT_RL

./: .gitignore  PROJECT_PROPOSAL.md  PROPOSAL.md  README.md  VERUSEARCH_ARCHITECTURE.md  dOverview.md  fix_truncated_specs.py
sft_data/verified-ironkv/: README.md  apply_corrections.py  check_data_quality.py  edit_dataset.py  filter_task_c.py  fix_task_a.py  verify_examples.py  view_dataset.py
sft_data/verified-ironkv/openai_format/: task_a_all_openai.jsonl  task_a_all_openai_fixed.jsonl  task_a_test_openai.jsonl  task_a_test_openai_fixed.jsonl  task_a_train_openai.jsonl  task_a_train_openai_fixed.jsonl  task_a_val_openai.jsonl  task_a_val_openai_fixed.jsonl  task_c_all_openai_filtered.jsonl  task_c_test_openai_filtered.jsonl  task_c_train_openai_filtered.jsonl  task_c_val_openai_filtered.jsonl
sft_data/verified-ironkv/raw/: task_a_all.jsonl  task_a_all_fixed_v3.jsonl  task_a_test.jsonl  task_a_test_fixed_v3.jsonl  task_a_train.jsonl  task_a_train_fixed_v2.comments.txt  task_a_train_fixed_v3.jsonl  task_a_val.jsonl  task_a_val_fixed.comments.txt  task_a_val_fixed_v2.comments.txt  task_a_val_fixed_v3.jsonl  task_c_all_filtered.jsonl  task_c_test_filtered.jsonl  task_c_train_filtered.jsonl  (+1 more)
verus_dataset/: __init__.py  __main__.py  cli.py  db.py  export.py  extract_functions.py  mine_inplace.py  reduce.py  scan.py  schema.sql  segment.py  tasks.py  verify.py  wrap.py
verus_extractor/: Cargo.toml
verus_extractor/src/: main.rs
workspace/exports/: code_synth.jsonl  spec_and_code.jsonl  val.jsonl
workspace/min_dataset/: README.md  stats.json
(+22 files in other folders)
