[package]
name = "verus_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "parsing", "visit", "printing"] }
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
md5 = "0.7"
regex = "1.10"
glob = "0.3"
